--- a/cv.css
+++ b/cv.css
@@ -96,6 +96,21 @@ input.w-search-bar {
     transition: 0.5s;
 
 }
+input.w-search-bar.on {
+    margin-top: 20%;
+    border: none;
+    outline: none;
+    padding: 0.5em 1em;
+    border-radius: 24px;
+    background: #7c7c7c2b;
+    color: black;
+    font-family: inherit;
+    font-size: 120%;
+    width: calc(100% - 100px);
+    transition: 0.5s;
+    animation: colors1 0.5s linear;
+
+}
 input.w-search-bar.dark {
     margin-top: 20%;
     border: none;
