--- a/cv.css
+++ b/cv.css
@@ -48,38 +48,36 @@ body.dark {
     transition: 0.5s;
 
 }
-
-
 .w-card.dark {
     background-color: #000000d0;
     color: white;
-    padding: 2em;
     border-radius: 30px;
-    width: 40%;
+    width: 26.5%;
     height: 40%;
     max-width: 420px;
-    margin-top: 5%;
+    margin-top: 2.5%;
     transition: 0.5s;
-
+    padding-left: 50px;
 }
 .w-card {
     background-color: #ffffffd0;
     color: black;
     padding: 2em;
     border-radius: 30px;
-    width: 40%;
+    width: 26.5%;
     height: 40%;
     max-width: 420px;
     margin-top: 2.5%;
     transition: 0.5s;
+    padding-left: 50px;
 
 }
-.o-card {
+.o-card.dark {
     top: 65%;
     right: 4%;
     position: absolute;
-    background-color: #ffffffd0;
-    color: black;
+    background-color: #000000d0;
+    color: white;
     padding: 2em;
     border-radius: 30px;
     width: 40%;
@@ -88,14 +86,11 @@ body.dark {
     transition: 0.5s;
 
 }
-
-
 .w-search {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 input.w-search-bar {
     margin-top: 20%;
     border: none;
@@ -192,7 +187,6 @@ input.w-search-bar.dark:hover {
         background: #7c7c7c2b;
     }
 }
-
 .p-name:hover {
     transform: scale(1.1);
 }
@@ -216,7 +210,6 @@ input.w-search-bar.dark:hover {
     transform: scale(1.1);
 
 }
-
 .p-mess {
     position: absolute;
     border: none;
@@ -229,7 +222,7 @@ input.w-search-bar.dark:hover {
     font-size: 120%;
     width: calc(28% - 100px);
     margin-right: 1%;
-    margin-top: 5%;
+    margin-top: 5.5%;
     margin-left: 9%;
     transition: 0.5s;
 
@@ -246,7 +239,7 @@ input.w-search-bar.dark:hover {
     font-size: 120%;
     width: calc(28% - 100px);
     margin-right: 1%;
-    margin-top: 5%;
+    margin-top: 5.5%;
     margin-left: 9%;
     transition: 0.5s;
     animation: colors1 0.5s linear;
@@ -266,16 +259,13 @@ input.w-search-bar.dark:hover {
     font-size: 120%;
     width: calc(28% - 100px);
     margin-right: 1%;
-    margin-top: 5%;
+    margin-top: 5.5%;
     margin-left: 9%;
     transition: 0.5s;
 }
 .p-mess.dark:hover {
     transform: scale(1.1);
-
 }
-
-
 .w-button {
     margin-top: 20%;
     margin-left: 4%;
@@ -344,9 +334,8 @@ input.w-search-bar.dark:hover {
     background-repeat: no-repeat;
     cursor: pointer;
     transition: 0.5s;
-    animation: load-animation 0.5s infinite linear;
+    animation: load-animation 0.2s infinite linear;
 }
-
 .p-card {
     border-radius: 40%;
     color: black;
@@ -364,7 +353,6 @@ input.w-search-bar.dark:hover {
 }
 .p-card:hover {
     transform: scale(1.1);
-
 }
 .p-card.dark {
     border-radius: 40%;
@@ -383,8 +371,6 @@ input.w-search-bar.dark:hover {
     transform: scale(1.1);
 
 }
-
-
 .p-card2 {
     border-radius: 40%;
     color: black;
@@ -418,7 +404,6 @@ input.w-search-bar.dark:hover {
 }
 .p-card2.dark:hover {
 transform: scale(1.1);
-
 }
 .p-card3 {
     border-radius: 40%;
@@ -471,7 +456,6 @@ transform: scale(1.1);
 .p-icon:hover {
     transform: scale(1.2);
 }
-
 .p-icon2 {
     margin-left: 1%;
     margin-top: 3%;
@@ -489,7 +473,6 @@ transform: scale(1.1);
 .p-icon2:hover {
     transform: scale(1.2)
 }
-
 .insta {
     justify-content: center;
     align-items: center;
@@ -538,7 +521,6 @@ transform: scale(1.1);
     height: 5%;
     color:white;
 }
-
 .p-button {
     margin: 00.5em;
     border-radius: 50%;
@@ -570,13 +552,13 @@ transform: scale(1.1);
 .p-button.dark:hover {
     background: #7c7c7c6b;
 }
-
-
 .w-description {
     font-size: 20px;
-}.w-humidity {
+}
+.w-humidity {
     font-size: 20px;
-}.w-wind {
+}
+.w-wind {
     font-size: 20px;
 }
 .fa {
@@ -586,8 +568,7 @@ transform: scale(1.1);
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
-  }
-
+}
 #p-image {
     margin-right: 5%;
     justify-self: left;
@@ -599,7 +580,6 @@ transform: scale(1.1);
 h1.w-temp {
     margin: 0px;
 }
-
 #info {
     transition: 0.5s;
 }
@@ -619,7 +599,6 @@ h1.w-temp {
     margin-top: 8%;
     transition: 0.5s;
 }
-
 .mario {
     width: 130px;
     position: absolute;
@@ -665,7 +644,6 @@ h1.w-temp {
         transform: rotate(360deg);
     }
 }
-
 @keyframes pipe-animation {
     from {
         right: -80px;
@@ -687,4 +665,87 @@ h1.w-temp {
     100% {
         bottom: 0%;
     }
+}
+.o-card {
+    display: flex;
+    top: 65%;
+    right: 4%;
+    position: absolute;
+    background-color: #ffffffd0;
+    color: black;
+    padding: 2em;
+    border-radius: 30px;
+    width: 40%;
+    height: 42%;
+    max-width: 420px;
+    transition: 0.5s;
+    overflow: hidden;
+}
+.slideImg {
+    position: absolute;
+    margin-top: 5%;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    margin-right: 20%;
+    width: 87%;
+    height: 70%;
+
+}
+.slide1 {
+    opacity: 0.0;
+    transition: 0.5s;
+    margin-bottom: 15%;
+}
+.slide2 {
+    opacity: 0.0;
+    transition: 0.5s;
+    margin-bottom: 15%;
+}
+.slide3 {
+    transition: 0.5s;
+    margin-bottom: 15%;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+}
+
+.firstButton {
+    color: white;
+    left: 46.5%;
+    top: 20%;
+    position: absolute;
+    width: 7%;
+    height: 115.5%;
+    background: #ffffff2b;
+    border: none;
+    border-radius: 5px;
+    transform: rotate(90deg);
+    text-align:center;
+    font-size: 16px;
+    transition: 0.5s;
+
+}
+.firstButton:hover {
+    background: #bebebe84;
+
+}
+.secondButton {
+    color: white;
+    left: 46.5%;
+    top: -35%;
+    position: absolute;
+    width: 7%;
+    height: 115.5%;
+    background: #ffffff2b;
+    border: none;
+    border-radius: 5px;
+    transform: rotate(-90deg);
+    text-align:center;
+    font-size: 16px;
+    transition: 0.5s;
+}
+.secondButton:hover {
+    background: #bebebe84;
+
 }
